dark mode sidebar fix for mobiles

--- a/Horizontal/wwwroot/css/dark-mode.css
+++ b/Horizontal/wwwroot/css/dark-mode.css
@@ -87,3 +87,9 @@ html.dark-theme .table tfoot td {
         border-color: #f13544;
     }
 }
+
+@media (max-width: 767px) {
+    main > aside {
+        background-color: #3b3b3b
+    }
+}
